--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <script src="./models/keyboard.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/fish.class.js"></script>
+    <script src="./models/endboss.class.js"></script>
     <script src="./models/light.class.js"></script>
+    <script src="./models/floor.class.js"></script>
+    <script src="./models/bg-object.class.js"></script>
     <script src="./models/world.class.js"></script>
     <script src="./js/game.js"></script>
     <title>Sharkie</title>
@@ -18,7 +22,7 @@
 <body onload="init()">
     <h1>Sharkie</h1>
 
-    <canvas id="canvas" width="720" height="480"></canvas>
+    <canvas id="canvas" width="1024" height="768"></canvas>
 </body>
 
 </html>
