--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <script src="./models/fish.class.js"></script>
     <script src="./models/endboss.class.js"></script>
     <script src="./models/light.class.js"></script>
-    <script src="./models/floor.class.js"></script>
     <script src="./models/bg-object.class.js"></script>
     <script src="./models/world.class.js"></script>
     <script src="./models/keyboard.class.js"></script>
+    <script src="./models/level.class.js"></script>
+    <script src="./levels/level1.js"></script>
     <script src="./js/game.js"></script>
     <title>Sharkie</title>
 </head>
