--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <script src="./models/light.class.js"></script>
     <script src="./models/bg-object.class.js"></script>
     <script src="./models/status-bar.class.js"></script>
+    <script src="./models/collectableobjects.class.js"></script>
     <script src="./models/coin.class.js"></script>
+    <script src="./models/poison.class.js"></script>
     <script src="./models/coinbar.class.js"></script>
     <script src="./models/healthbar.class.js"></script>
     <script src="./models/poisonbar.class.js"></script>
