--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 </head>
 
 <body onload="init()">
+    <div id="fullscreen">
+        <button onclick="fullscreen()" id="fullscreen-button">Klick here to enter fullscreen or press F</button>
     <h1>Sharkie</h1>
-
     <canvas id="canvas" width="720" height="480"></canvas> <!--Hier wird eingestellt wie groß der canvas sein soll-->
+</div>
 </body>
 
 </html>
