updated toggle music function, adjusted stat size

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <body onload="init()">
     <div id="fullscreen">
         <button onclick="fullscreen()" id="fullscreen-button">Klick here to enter fullscreen or press F</button>
+        <button onclick="toggleSfx()" id="toggleSfx">toggleSfx</button>
+        <button onclick="togglePlay()" id="toggleMusic">toggleMusic</button>
     <h1>Sharkie</h1>
     <canvas id="canvas" width="720" height="480"></canvas> <!--Hier wird eingestellt wie groß der canvas sein soll-->
 </div>
