--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
         <span>Arrow right - move right</span><br>
         <span>Arrow up - move up</span><br>
         <span>Arrow down - move down</span><br>
-        <button onclick="toggleHelp()" id="toggleHelp">How to play (H)</button>
+        <button onclick="toggleHelp()" class="btn-container btn-text" id="toggleHelp">How to play (H)</button>
     </div>
 
     <div id="fullscreen">
         <div canvasOver>
-            <button onclick="fullscreen()" id="fullscreen-button">Fullscreen(F)</button>
-            <button onclick="toggleSfx()" id="toggleSfx">toggleSfx</button>
-            <button onclick="togglePlay()" id="toggleMusic">toggleMusic</button>
+            <button onclick="fullscreen()" class="btn-container btn-text" id="fullscreen-button">Fullscreen (F)</button>
+            <button onclick="toggleHelp()" class="btn-container btn-text" id="toggleHelp">How to play (H)</button>
+            <button onclick="togglePlay()" class="btn-container btn-text" id="toggleMusic">Toggle music</button>
         </div>
         <h1>Sharkie</h1>
         <canvas id="canvas" width="720" height="480"></canvas>
         <!--Hier wird eingestellt wie groß der canvas sein soll-->
             <div class="canvasSub">
-        <button onclick="toggleHelp()" id="toggleHelp">How to play (H)</button>
+        
     </div>
     </div>
 
