--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <button onclick="togglePlay()" class="btn-container btn-text" id="toggleMusic">Toggle music</button>
         </div>
         <h1>Sharkie</h1>
-        <canvas id="canvas" width="720" height="480"></canvas>
+        <canvas id="canvas" width="1024" height="480"></canvas>
 
             <div class="canvasSub">
-                <button onclick="initLevel();init()" class="btn-container btn-text" id="toggleMusic">Start game</button>
+                <button onclick="initLevel();init()" class="btn-container btn-text" id="toggleGame">Start game</button>
     </div>
     </div>
 
