game over screen incomplete

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
         </div>
         <h1>Sharkie</h1>
 
-
+        <div class="canvas-field">
+            <img id="gameOverScreen" src="./img/Buttons/Tittles/Gameover/gameover(1).png" alt="">
+            <img id="winnerScreen" src="./img/Buttons/Tittles/Win/winner(1).png" alt="">
             <canvas id="canvas" width="720" height="480"></canvas>
-
+        </div>
         <div class="canvasSub">
             <button onclick="initLevel();init()" class="btn-container btn-text" id="toggleGame">Start game</button>
         </div>
