--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
         <h1>Sharkie</h1>
 
         <div class="canvas-field">
-            <img id="gameOverScreen" src="./img/Buttons/Tittles/Gameover/gameover(1).png" alt="">
-            <img id="winnerScreen" src="./img/Buttons/Tittles/Win/winner(1).png" alt="">
+            <img id="gameOverScreen" class="displayNone" src="./img/Buttons/Tittles/Gameover/gameover(1).png" alt="">
+            <img id="winnerScreen" class="displayNone" src="./img/Buttons/Tittles/Win/winner(1).png" alt="">
             <canvas id="canvas" width="720" height="480"></canvas>
         </div>
         <div class="canvasSub">
-            <button onclick="initLevel();init()" class="btn-container btn-text" id="toggleGame">Start game</button>
+            <button onclick="initLevel();init();resetGame()" class="btn-container btn-text"
+                id="toggleGame">Start game</button>
         </div>
     </div>
 
