help added, optimized code

--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
 
 <body>
     <div id="HowToPlay">
-        <h2>How to play</h2>
+        <h2>Instructions</h2><br>
+        <span>Be the shark, face the dangers and defeat Orqi, the evil orca that makes his nuisance in the deep waters.
+            Use the fin attack to beat the opponents with Sharkie. When you have collected the poison bottles, you can
+            also shoot bubbles.</span><br>
         <span>Usw arrow keys to move Sharkie</span><br>
         <span>Arrow left - move left</span><br>
         <span>Arrow right - move right</span><br>
         <span>Arrow up - move up</span><br>
         <span>Arrow down - move down</span><br>
+        <span>Space - Fins attack</span><br>
+        <span>D - Shoot bubbles</span><br>
         <button onclick="toggleHelp()" class="btn-container btn-text" id="toggleHelp">How to play (H)</button>
     </div>
 
@@ -56,8 +61,8 @@
             <canvas id="canvas" width="720" height="480"></canvas>
         </div>
         <div class="canvasSub">
-            <button onclick="initLevel();init();resetGame()" class="btn-container btn-text"
-                id="toggleGame">Start game</button>
+            <button onclick="initLevel();init();resetGame()" class="btn-container btn-text" id="toggleGame">Start
+                game</button>
         </div>
     </div>
 
