--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="img/favico.png" type="image/x-icon">
     <script src="./models/drawable-object.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
+    <script src="models/assets.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/pufferfish.class.js"></script>
     <script src="./models/jellyfish.class.js"></script>
