--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="restartBtn d-none" id="restartBtn">
-            <button onclick="window.location.reload()" id="" class="btn-container btn-text d-none">Restart</button>
+            <button onclick="window.location.reload()" class="btn-container btn-text d-none">Restart</button>
         </div>
 
         <div class="canvas-field">
