--- a/index.html
+++ b/index.html
@@ -34,32 +34,29 @@
 </head>
 
 <body onload="onloadInit()">
-    
-    <div id="loadingscreen">
-
-        <div id="rotaDisplay">
-            <h1>Please rotate your device</h1>
+    <div id="loadingscreen"></div>
+    <div id="rotaDisplay">
+        <h1>Please rotate your device</h1>
+    </div>
+    <div id="HowToPlay">
+        <h2>Instructions</h2><br>
+        <div class="span-wrap">
+            <span>Be the shark, face the dangers and defeat Orqi, the evil orca that makes his nuisance in the deep
+                waters.
+                Use the fin attack to beat the opponents with Sharkie. When you have collected the poison bottles,
+                you
+                can
+                also shoot bubbles.</span><br>
+            <span>Usw arrow keys to move Sharkie</span><br>
+            <span>Arrow left - move left</span><br>
+            <span>Arrow right - move right</span><br>
+            <span>Arrow up - move up</span><br>
+            <span>Arrow down - move down</span><br>
+            <span>Space/Fins button - Fins attack</span><br>
+            <span>D/Shoot button - Shoot bubbles</span><br>
         </div>
-        <div id="HowToPlay">
-            <h2>Instructions</h2><br>
-            <div class="span-wrap">
-                <span>Be the shark, face the dangers and defeat Orqi, the evil orca that makes his nuisance in the deep
-                    waters.
-                    Use the fin attack to beat the opponents with Sharkie. When you have collected the poison bottles,
-                    you
-                    can
-                    also shoot bubbles.</span><br>
-                <span>Usw arrow keys to move Sharkie</span><br>
-                <span>Arrow left - move left</span><br>
-                <span>Arrow right - move right</span><br>
-                <span>Arrow up - move up</span><br>
-                <span>Arrow down - move down</span><br>
-                <span>Space/Fins button - Fins attack</span><br>
-                <span>D/Shoot button - Shoot bubbles</span><br>
-            </div>
-            <button onclick="toggleHelp()" class="btn-container btn-text">How to play</button>
-        </div>
-
+        <button onclick="toggleHelp()" id="helpbtnopened" class="btn-container btn-text">How to play</button>
+    </div>
     </div>
     <div id="fullscreen">
         <h1 id="gameTitle">Sharkie</h1>
@@ -69,28 +66,24 @@
             <button onclick="togglePlay()" class="btn-container btn-text" id="toggleMusic">Music on</button>
             <button onclick="init()" class="btn-container btn-text" id="toggleGame">Start game</button>
         </div>
-
         <div class="restartBtn d-none" id="restartBtn">
             <button onclick="window.location.reload()" class="btn-container btn-text d-none">Restart</button>
         </div>
-
         <div class="canvas-field">
             <img id="gameOverScreen" class="displayNone" src="./img/Buttons/Tittles/Gameover/gameover(1).png" alt="">
             <img id="winnerScreen" class="displayNone" src="./img/Buttons/Tittles/Win/winner(5).png" alt="">
             <canvas id="canvas" width="720" height="480"></canvas>
         </div>
-
         <div id="touch-area-left">
             <img id="touch-area-left-img" src="./img/Buttons/Key/arrow_keys.png" alt="">
             <div class="touchbtn-left">
                 <div class="touchbtn-rows touchbtn-first-row">
-                    <div class="test-color" id="touchbtn-up"></div>
+                    <div id="touchbtn-up"></div>
                 </div>
                 <div class="touchbtn-rows touchbtn-second-row">
-                    <div class="test-color" id="touchbtn-left"></div>
-                    <div class="test-color" id="touchbtn-down"></div>
-                    <div class="test-color" id="touchbtn-right"></div>
-
+                    <div id="touchbtn-left"></div>
+                    <div id="touchbtn-down"></div>
+                    <div id="touchbtn-right"></div>
                 </div>
             </div>
         </div>
@@ -103,8 +96,6 @@
             </div>
         </div>
     </div>
-
-
 </body>
 
 </html>
