added toggle sfx

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <button onclick="fullscreen()" class="btn-container btn-text" id="fullscreen-button">Fullscreen</button>
             <button onclick="toggleHelp()" class="btn-container btn-text" id="toggleHelp">How to play</button>
             <button onclick="togglePlay()" class="btn-container btn-text" id="toggleMusic">Music on</button>
+            <button onclick="toggleSfx()" class="btn-container btn-text" id="toggleSfx">Sfx on</button>
             <button onclick="init()" class="btn-container btn-text" id="toggleGame">Start game</button>
         </div>
         <div class="restartBtn d-none" id="restartBtn">
