fixed touch buttons

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
             <img id="touch-area-left-img" src="./img/Buttons/Key/arrow_keys.png" alt="">
             <div class="touchbtn-left">
                 <div class="touchbtn-rows touchbtn-first-row">
-                    <div id="touchbtn-up"></div>
+                    <div id="touchbtn-up" class="touchBtn"></div>
                 </div>
                 <div class="touchbtn-rows touchbtn-second-row">
-                    <div id="touchbtn-left"></div>
-                    <div id="touchbtn-down"></div>
-                    <div id="touchbtn-right"></div>
+                    <div id="touchbtn-left" class="touchBtn"></div>
+                    <div id="touchbtn-down" class="touchBtn"></div>
+                    <div id="touchbtn-right" class="touchBtn"></div>
                 </div>
             </div>
         </div>
