minor bugs fixed, added slap sfx

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 </head>
 
 <body onload="onloadInit()">
-    <div id="loadingscreen"></div>
+    <div id="loadingscreen">
+        <div id="loadingScreenSubDiv"></div>
+    </div>
     <div id="rotaDisplay">
         <h1>Please rotate your device</h1>
     </div>
