--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <div id="fullscreen">
         <h1 id="gameTitle">Sharkie</h1>
-        <div class="canvasOver" >
+        <div class="canvasOver" id="canvasOverOver">
             <div id="canvasOver">
                 <button onclick="toggleHelp()" class="btn-container btn-text" id="toggleHelp">How to play</button>
             </div>
