optimized restart button

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <button onclick="init()" class="btn-container btn-text" id="toggleGame">Start game</button>
             </div>
         </div>
-        <div class="restartBtn d-none" id="restartBtn">
-            <button onclick="window.location.reload()" class="btn-container btn-text d-none">Restart</button>
+        <div class="restartBtn" id="restartBtn">
+            <button onclick="window.location.reload()" class="btn-container btn-text">Restart</button>
         </div>
         <div class="canvas-field">
             <img id="gameOverScreen" class="displayNone" src="./img/Buttons/Tittles/Gameover/gameover(1).png" alt="">
