--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="toggleThings" id="toggleThings">
                 <button onclick="fullscreen()" class="btn-container btn-text" id="fullscreen-button">Fullscreen</button>
-                <button onclick="togglePlay()" class="btn-container btn-text" id="toggleMusic">Music on</button>
+                <button onclick="toggleMusic()" class="btn-container btn-text" id="toggleMusic">Music on</button>
                 <button onclick="toggleSfx()" class="btn-container btn-text" id="toggleSfx">Sfx on</button>
             </div>
             <div>
